force-app/main/default/objects/Car_Park__c/Car_Park__c.object-meta.xml
<CustomObject>
    <label>Car Park</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Car Park Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Car Parks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>