force-app/main/default/objects/Car_Park__c/fields/Car_Park_Max_Amount__c.field-meta.xml
<CustomField>
    <fullName>Car_Park_Max_Amount__c</fullName>
    <label>Car Park Max Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>