force-app/main/default/objects/Car_Park__c/fields/Car_Park_Number__c.field-meta.xml
<CustomField>
    <fullName>Car_Park_Number__c</fullName>
    <label>Car Park Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>