force-app/main/default/objects/Car_Park__c/fields/Car_Park_Type__c.field-meta.xml
<CustomField>
    <fullName>Car_Park_Type__c</fullName>
    <label>Car Park Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Car_Park_Type</valueSetName>
    </valueSet>
</CustomField>