force-app/main/default/objects/Car_Park__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Car Parks</relationshipLabel>
    <relationshipName>Car_Parks</relationshipName>
    <type>Lookup</type>
</CustomField>