force-app/main/default/objects/Car_Park__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Car Parks</relationshipLabel>
    <relationshipName>Car_Parks</relationshipName>
    <type>Lookup</type>
</CustomField>